[532336] - Add support for JSF 2.3
Change-Id: I24e35e1c0a01940442059309f98a5e403d9e30dd

--- a/jsf/plugins/org.eclipse.jst.jsf.core/plugin.properties
+++ b/jsf/plugins/org.eclipse.jst.jsf.core/plugin.properties
@@ -29,6 +29,9 @@ JSFv21PresetDesc=Configures a Dynamic Web application to use JSF v2.1
 
 JSFv22Project=JavaServer Faces v2.2 Project
 JSFv22PresetDesc=Configures a Dynamic Web application to use JSF v2.2
+
+JSFv23Project=JavaServer Faces v2.3 Project
+JSFv23PresetDesc=Configures a Dynamic Web application to use JSF v2.3
 # ====================================================================
 
 pluginName = Constraints Model
