--- a/jsf/plugins/org.eclipse.jst.jsf.ui/plugin.xml
+++ b/jsf/plugins/org.eclipse.jst.jsf.ui/plugin.xml
@@ -74,6 +74,12 @@
               class="org.eclipse.jst.jsf.ui.internal.project.facet.JSFFacetInstallPage">
         </page>
      </wizard-pages>
+     <wizard-pages
+           action="jst.jsf.v23.install">
+        <page
+              class="org.eclipse.jst.jsf.ui.internal.project.facet.JSFFacetInstallPage">
+        </page>
+     </wizard-pages>
   </extension>  
   
   <extension point="org.eclipse.wst.sse.ui.editorConfiguration"> 
